--- a/index.html
+++ b/index.html
@@ -31,6 +31,21 @@
             <img src="images/pranto3.png" alt="">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/Pranto1.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a Web Developer</h3>
+            <p>Proficiency with fundamental front end languages such as HTML, CSS, and JavaScript. Familiarity with
+                JavaScript frameworks such as Angular JS and React. Proficiency with server-side languages such as
+                Python, Ruby, Java, PHP, and .Net.Familiarity with database technology such as MySQL, Oracle, and
+                MongoDB. My goal is to Build dinamic web-based softwere and wants to be a softwere developer. </p>
+            <a class="link-button" target="_blank" href="">Download resume</a>
+        </div>
+
+    </section>
 </body>
 
 </html>
