--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Pranto`s</span> World</h1>
@@ -31,7 +31,7 @@
             <img src="images/pranto3.png" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="images/Pranto1.png" alt="">
         </div>
@@ -44,8 +44,29 @@
                 MongoDB. My goal is to Build dinamic web-based softwere and wants to be a softwere developer. </p>
             <a class="link-button" target="_blank" href="">Download resume</a>
         </div>
-
     </section>
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div id="full-stack-experience" class="experient-item">
+                <h2>Full Stack Web develper</h2>
+                <h3 class="orange-color">2022-Present | Pro Level Developer</h3>
+                <p>I am the Bachelor of HTML, CSS and JavaScript. I know everything needed to make a website function,
+                    efficient.I didn`t stop with the web. I went beyond with most popular JavaScript framework called
+                    Vue
+                    JS. I even know the deployment, sever and security. I will give you 100% web solution.</p>
+            </div>
+            <div id="web-dev-experience" class="experient-item">
+                <h2>Junior Web Developer</h2>
+                <h3 class="orange-color">2019-2021 | Hero Learner</h3>
+                <p>They didn`t offer me a job. Because I made myself as a remove web developer. I made their website and
+                    showed it to them. They liked it. and uploded the content.</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>© Pranto`s world 2022, a programming Hero initiative.</p>
+    </footer>
 </body>
 
 </html>
